<resources>
    <string name="app_name">quiz</string>
    <string name="test_your_knowledge_by_taking_a_simple_quiz">Test your knowledge by taking a simple quiz.\n
        -<b>Choose a topic</b>\n
        -<b>Answer 10 Questions</b>\n
        -<b>Try to get a good Score</b>\n
        -<b>ALL THE BEST</b>
    </string>
    <string name="topic1">General Geography and Physical Features</string>
    <string name="topic2">Physical Features and Climate of India</string>
    <string name="topic3">Climate, Soil and Vegetation and Drainage System</string>
    <string name="topic4">Human Geography</string>
    <string name="topic5">Economic Geography</string>
    <string name="topic6">GK Quiz</string>
    <string name="title_activity_resultscreen">resultscreen</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>