<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#32E10A0A"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="99dp"
        android:layout_height="59dp"
        android:layout_marginTop="44dp"
        android:background="#B5C8FF"
        android:fontFamily="@font/bungee_inline"
        android:onClick="topic6"
        android:text="@string/topic6"
        android:textAlignment="center"
        android:textColor="#E60808"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="99dp"
        android:layout_height="59dp"
        android:layout_marginTop="44dp"
        android:background="#B5C8FF"
        android:fontFamily="@font/bungee_inline"
        android:onClick="topic4"
        android:text="@string/topic4"
        android:textAlignment="center"
        android:textColor="#E60808"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="99dp"
        android:layout_height="59dp"
        android:layout_marginTop="32dp"
        android:background="#B5C8FF"
        android:fontFamily="@font/bungee_inline"
        android:onClick="topic2"
        android:text="@string/topic2"
        android:textAlignment="center"
        android:textColor="#E60808"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.149"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="99dp"
        android:layout_height="59dp"
        android:layout_marginTop="32dp"
        android:background="#5B1A40BA"
        android:fontFamily="@font/bungee_inline"
        android:onClick="topic3"
        android:text="@string/topic3"
        android:textAlignment="center"
        android:textColor="#E60808"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="99dp"
        android:layout_height="59dp"
        android:layout_marginTop="32dp"
        android:background="#5B1A40BA"
        android:fontFamily="@font/bungee_inline"
        android:onClick="topic1"
        android:text="@string/topic1"
        android:textAlignment="center"
        android:textColor="#E60808"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="99dp"
        android:layout_height="59dp"
        android:layout_marginTop="44dp"
        android:background="#5B1A40BA"
        android:fontFamily="@font/bungee_inline"
        android:onClick="topic5"
        android:text="@string/topic5"
        android:textAlignment="center"
        android:textColor="#E60808"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.162"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="278dp"
        android:layout_height="62dp"
        android:fontFamily="casual"
        android:text="Choose The Topic"
        android:textAlignment="center"
        android:textColor="#B58888"
        android:textSize="34sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.37" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="372dp"
        android:layout_height="143dp"
        android:layout_marginTop="32dp"
        android:fontFamily="cursive"
        android:text="@string/test_your_knowledge_by_taking_a_simple_quiz"
        android:textAlignment="viewStart"
        android:textColor="#3F51B5"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="200dp"
        android:layout_height="29dp"
        android:layout_marginTop="60dp"
        android:fontFamily="monospace"
        android:text="Welcome To QUIZ"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/playerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:hint="Ex:  Rustic"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="162dp"
        android:text="Enter Player Name"
        app:layout_constraintBottom_toTopOf="@+id/playerName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/scoreboard"
        android:layout_width="151dp"
        android:layout_height="41dp"
        android:onClick="scoreboard"
        android:text="Scoreboard"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.962"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.164" />

</androidx.constraintlayout.widget.ConstraintLayout>